{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 25,
  "lineage": "d7585618-1e48-35aa-73b2-f36456b273c9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.39.35",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-22T07:52:18.606-07:00",
            "id": "projects/nennkinn-claude/global/addresses/disability-pension-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "disability-pension-ip",
            "prefix_length": 0,
            "project": "nennkinn-claude",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nennkinn-claude/global/addresses/disability-pension-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    }
  ]
}